# TurboQuant

./: .gitignore  README.md  pyproject.toml
scripts/: eval_vector_search.py  run_reference_benchmarks.py
tests/: test_benchmarks.py  test_codebooks.py  test_datasets.py  test_index.py  test_io.py  test_math.py  test_norm_correction.py  test_packing.py  test_qjl.py  test_search.py  test_searchsorted.py  test_turboquant_mse.py  test_turboquant_prod.py  test_types.py
turboquant/: __init__.py  benchmarks.py  codebooks.py  datasets.py  index.py  io.py  math.py  packing.py  qjl.py  search.py  turboquant_mse.py  turboquant_prod.py  types.py
